added user emoji usage stats api
